infra/k8s/onboarding/kjk-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
  namespace: onboarding
spec:
  selector:
    app: 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
