infra/k8s/onboarding/kjk-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kjk-test-app
  namespace: onboarding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kjktest.stage.codedang.com
      secretName: kjk-test-app-tls
  rules:
    - host: kjktest.stage.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kjk-test-app
                port:
                  number: 80
